--- a/public/2015/styles/all.css
+++ b/public/2015/styles/all.css
@@ -212,11 +212,13 @@
       display: inline; }
     .body-section--event-header .body-section--event-header__city > span:first-child:after, .content-page--event-header .body-section--event-header__city > span:first-child:after {
       content: ', '; } }
-@media (min-width: 900px) and (min-height: 50rem) {
-  .body-section--event-header .skip-nav, .content-page--event-header .skip-nav {
-    opacity: 1;
-    -webkit-animation-play-state: running;
-            animation-play-state: running; } }
+@media (min-width: 900px) and (min-height: 30rem) {
+  .body-section--event-header, .content-page--event-header {
+    padding-top: 15vh; }
+    .body-section--event-header .skip-nav, .content-page--event-header .skip-nav {
+      opacity: 1;
+      -webkit-animation-play-state: running;
+              animation-play-state: running; } }
 
 .body-section--event-footer h3 {
   font-size: 1rem;
